@@ -202,6 +202,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #6972: The zipfile module no longer overwrites files outside of
+  its destination path when extracting malicious zip files.
+
 - Issue #17049: Localized calendar methods now return unicode if a locale
   includes an encoding and the result string contains month or weekday (was
   regression from Python 2.6).
